[package]
name = "network-emulator"
version = "0.1.0"
authors = ["bold <bold@cryptoguru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
async-std = { version = "1.4.0", features = ["unstable"] }
futures-delay-queue = "0.2.2"
crossbeam = "0.7.3"
tokio = { version = "0.2.6", features = ["full"] }
rand_distr = "0.2.2"
serde_yaml = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.3.2"
bitvec = "0.16.1"
lazy_static = "1.4.0"

[dev-dependencies]
csv = "1"
rusty-hook = "0.10"