[package]
name = "network-emulator"
version = "0.1.0"
authors = ["bold <bold@cryptoguru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.3.2"
bitvec = "0.16.1"
lazy_static = "1.4.0"

[dev-dependencies]
csv = "1"
rusty-hook = "0.10"
crossbeam = "0.7.3"

[lib]
#name = "libhaptic_db"
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.9.1"